Spacing and font fixes

--- a/src/components/projects/Projects.module.css
+++ b/src/components/projects/Projects.module.css
@@ -4,15 +4,18 @@
     justify-content: center;
     align-items: flex-start;
     flex-direction: column;
-    width: 80%;
+    /* width: 80%; */
     width: 100%;
     margin-bottom: 1.25em;
-    gap: 1.25em;
+    gap: 14px;
+    
+    max-width: 315px;
+    overflow: hidden;
 }
 .iw-card-img-wrap {
-    min-width: 315px;
-    width: 315px;
-    height: 200px;
+    /* min-width: 315px; */
+    width: 100%;
+    height: auto;
 }
 /* .iw-header {
     margin: 4em 0;
